blocks/modal.css
.modal {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 20px;
  /* visibility: hidden; */
}
.modal__opened {
  visibility: visible;
}
.modal__container {
  background-color: white;
  max-width: 730px;
  width: 100%;
  box-sizing: border-box;
  padding: 32px 50px;
  position: relative;
  border-radius: 8px;
}
.modal__close-btn {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: transparent;
  border: none;
  top: 32px;
  right: 50px;
  width: 40px;
  height: 40px;
  opacity: 40%;
}
.modal__close-btn:hover {
  opacity: 100%;
}
.modal__title {
  margin: 4px 0 36px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 32px;
  line-height: 1;
}
.modal__label {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin-bottom: 32px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.1;
  color: #212121;
  opacity: 70%;
}
.modal__input {
  padding: 16px 12px;
  font-family: Poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 20px;
  line-height: 1;
  color: #212121;
  border-radius: 8px;
  border: 1px solid #21212166;
}
.modal__submit-btn {
  width: 156px;
  background-color: rgba(33, 33, 33, 1);
  border-radius: 8px;
  border: none;
  color: #fcf5e5;
  padding: 18px 0;
}
@media screen and (max-width: 627px) {
  .modal {
    padding: 10px;
  }
  .modal__container {
    padding: 12px;
  }
  .modal__title {
    font-size: 20px;
    margin: 10px 0 34px;
  }
  .modal__close-btn {
    top: 12px;
    right: 12px;
  }
  .modal__label {
    margin-bottom: 24px;
  }
  .modal__input {
    font-size: 16px;
  }
  .modal__submit-btn {
    width: 100%;
  }
}

